[package]
name = "piston-tutorials"
version = "0.1.0"
authors = ["void"]
license = "MIT/Apache-2.0"

[[bin]]
name = "hello_window"
path = "src/hello_window.rs"

[[bin]]
name = "pong"
path = "src/pong/pong.rs"

[[bin]]
name = "pong_ball"
path = "src/pong/pong_ball.rs"

[[bin]]
name = "aabb"
path = "src/collision/aabb.rs"

[dependencies]
piston = "*"
piston_window = "*"
find_folder = "*"
rand = "*"
ears = "*"